--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cleave.js": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
